# django-query-snitch

./: LICENSE  README.md  pyproject.toml
query_snitch/: decorators.py  middleware.py
